--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <!-- displays site properly based on user's device -->
 
-<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   
   <title>Frontend Mentor | QR code component</title>
 
@@ -14,7 +14,7 @@
 <body >
 
 <div class="container">
-  <img src="./images/image-qr-code.png" alt="QR code image">
+  <img src="image-qr-code.png" alt="QR code image">
   <h1>Improve your front-end skills by building projects</h1>
   <p>
     Scan the QR code to visit frontend Mentor and take 
